--- a/index.html
+++ b/index.html
@@ -70,7 +70,60 @@
         </div>
       </div>
     </section>
-
+    
+    <section id="about">
+      <p class="section__text__p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img
+            src="./assets/about-pic.png"
+            alt="profile picture"
+            class="about-pic"
+          />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="./assets/experience.png"
+                alt="experience icon"
+                class="icon"
+              />
+              <h3>Experience</h3>
+              <p>1+ year <br />Frontend Development</p>
+            </div>
+            <div class="details-container">
+              <img
+                src="./assets/education.png"
+                alt="education icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>Platzi online school</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              I'm a frontend web developer passionate about creativity,
+              innovation, and continuous learning. For the past year and a half,
+              I’ve been deeply focused on self-education and building personal
+              projects that showcase my technical skills, curiosity, and
+              commitment to professional growth. I'm currently seeking a
+              frontend developer role where I can contribute my knowledge, learn
+              from a professional team, and continue building my career in the
+              tech industry
+            </p>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow Icon"
+        class="icon arrow"
+        onclick="location.href='#experience'"
+      />
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
