--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </ul>
       </div>
     </nav>
+
     <nav id="hamburger-nav">
       <div class="logo">Manuel Arteaga</div>
       <div class="hamburger-menu">
@@ -35,6 +36,7 @@
         </div>
       </div>
     </nav>
+
     <section id="profile">
       <div class="section__pic-container">
         <img src="./assets/profile-pic.png" alt="My prfile picture" />
@@ -70,7 +72,7 @@
         </div>
       </div>
     </section>
-    
+
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
@@ -124,6 +126,205 @@
         onclick="location.href='#experience'"
       />
     </section>
+
+    <section id="experience">
+      <p class="section__text__p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2 class="experience-sub-title">Frontend Development</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/html-5.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML</h3>
+                  <p>2 years of experience</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/css-3.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>CSS</h3>
+                  <p>2 years of experience</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/react.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>React.js</h3>
+                  <p>1+ years of experience</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/javascript-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>JavaScript</h3>
+                  <p>2 years of experience</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets//itailwindcss-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Tailwind.css</h3>
+                  <p>1+ years of experience</p>
+                </div>
+              </article>
+            </div>
+          </div>
+
+          <div class="details-container">
+            <h2 class="experience-sub-title">Backend Development</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/nodejs.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Node.js</h3>
+                  <p>1+ years of experience</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/express-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Express.js</h3>
+                  <p>1+ years of experience</p>
+                </div>
+              </article>
+            </div>
+          </div>
+
+          <div class="details-container">
+            <h2 class="experience-sub-title">DataBase</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/mongodb-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MongoDb</h3>
+                  <p>2 years of experience</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/mysql-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MySql</h3>
+                  <p>1+ years of experience</p>
+                </div>
+              </article>
+            </div>
+          </div>
+
+          <div class="details-container">
+            <h2 class="experience-sub-title">Mobile</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/react-native-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>React-native</h3>
+                  <p>1+ years of experience</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          
+          <div class="details-container tools-container">
+            <h2 class="experience-sub-title">Tools</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/github-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>GitHub</h3>
+                  <p>2 years of experience</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/visualCode-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Visual Studio</h3>
+                  <p>2 of years xperience</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/postman-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Postman</h3>
+                  <p>1+ years of experience</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/expo-go-icon.png"
+                  alt="experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Expo Go</h3>
+                  <p>1 year experience</p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow Icon"
+        class="icon arrow"
+        onclick="location.href='#projects'"
+      />
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
