--- a/index.html
+++ b/index.html
@@ -416,13 +416,28 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://www.linkedin.com/in/manuel-alejandro-arteaga-ontiveros-39b502369"
+            <a
+              href="https://www.linkedin.com/in/manuel-alejandro-arteaga-ontiveros-39b502369"
               >LinkedIn</a
             >
           </p>
         </div>
       </div>
     </section>
+
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2024 Manuel Arteaga. All Rights Reserved</p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
